[26] Fixed wrap in average rating item

--- a/src/Auctionify.API/ClientApp/src/app/components/general/profile/public-user-profile/public-user-profile.component.scss
+++ b/src/Auctionify.API/ClientApp/src/app/components/general/profile/public-user-profile/public-user-profile.component.scss
@@ -58,28 +58,4 @@
         flex-direction: column;
         gap: 16px;
     }
-
-    &__container-rate {
-        border-radius: 16px;
-        border: 1px solid #e0e0e0;
-        padding: 40px;
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
-        height: 280px;
-    }
-
-    &__see-more-comments-btn button {
-        width: 392px;
-        min-width: 250px;
-        border: 2px solid #2b5293;
-        color: #2b5293;
-    }
-
-    &__btn-content {
-        display: flex;
-        flex-direction: row;
-        gap: 8px;
-        align-items: center;
-    }
 }
