--- a/src/Auctionify.API/ClientApp/src/app/components/seller/dashboard/dashboard.component.scss
+++ b/src/Auctionify.API/ClientApp/src/app/components/seller/dashboard/dashboard.component.scss
@@ -29,7 +29,7 @@
         height: 48px;
         border-radius: 32px;
         border: none;
-        background-color: #F2F5F7;
+        background-color: #f2f5f7;
         font-weight: bold;
         font-family: 'Onest', sans-serif;
     }
@@ -40,35 +40,12 @@
         align-items: center;
     }
 
-    &__container-rate {
-        border-radius: 16px;
-        border: 1px solid #e0e0e0;
-        padding: 40px;
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
-    }
-
     &__rating-btn {
         width: 130px;
     }
 
     &__feedback-btn {
         width: 160px;
-    }
-
-    &__see-more-comments-btn button {
-        width: 392px;
-        min-width: 250px;
-        border: 2px solid #2B5293;
-        color: #2B5293;
-    }
-
-    &__btn-content {
-        display: flex;
-        flex-direction: row;
-        gap: 8px;
-        align-items: center;
     }
 
     &__no-comments {
